[package]
name = "json_rpc"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["sync", "time"] }
serde_json = "1.0.59"
serde = {version = "1.0.117", features=["derive"] }
anyhow = "1.0.33"
thiserror = "1.0.21"
thiserror-impl = "1.0.21"
derive_more ="0.99.11"
[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }